atomics/T1651/src/T1651-1/compute.tf
data "aws_ami" "ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"]
}

resource "aws_instance" "instance" {
  ami           = data.aws_ami.ami.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.subnet.id
  iam_instance_profile = aws_iam_instance_profile.profile.name
  vpc_security_group_ids = [ aws_security_group.sg.id ]
  user_data = <<EOF
systemctl enable amazon-ssm-agent
systemctl start amazon-ssm-agent
EOF
  tags = {
    Name = "T1651-1"
  }
}
